--- a/source/scss/global/variables.scss
+++ b/source/scss/global/variables.scss
@@ -14,7 +14,12 @@ $mobile-gap: 16px;
 //Цвета
 $main-text: #151515;
 $primary: #f32424;
+$primary-hover: #e71212;
+$primary-active: #ce0c0c;
 $grey100: #f3f3f3;
+$grey200: #eeeeee;
+$grey300: #dee0e1;
+$grey400: #adb0b4;
 $darkGrey: #172330;
 // $white: #ffffff;
 // $grey200: #f4f4f8;
