--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -6,6 +6,7 @@
   background-color: #fff;
   padding: 30px 0;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+  z-index: 10;
 }
 
 .header__container {
