--- a/source/scss/global/global.scss
+++ b/source/scss/global/global.scss
@@ -22,6 +22,7 @@ img {
 
 body {
   font-family: $font;
+  color: $main-text;
   min-width: $mobile;
   min-height: 100vh;
   display: flex;
@@ -38,6 +39,32 @@ main {
 
   @include mobile {
     padding-top: 64px;
+  }
+}
+
+section {
+  margin-bottom: 100px;
+
+  @include tablet {
+    margin-bottom: 80px;
+  }
+
+  @include mobile {
+    margin-bottom: 40px;
+  }
+}
+
+.section-title {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 38px;
+  color: $main-text;
+  margin: 0 0 40px;
+
+  @include mobile {
+    font-size: 24px;
+    line-height: 29px;
+    margin: 0 0 24px;
   }
 }
 
