--- a/css/style.css
+++ b/css/style.css
@@ -2728,6 +2728,7 @@ img {
 
 body {
   font-family: "Inter", "Arial", "Helvetica", "Helvetica CY", "Nimbus Sans";
+  color: #151515;
   min-width: 320px;
   min-height: 100vh;
   display: -webkit-box;
@@ -2749,6 +2750,27 @@ main {
   @media (max-width: 767px) {
     main {
       padding-top: 64px; } }
+
+section {
+  margin-bottom: 100px; }
+  @media (max-width: 1279px) {
+    section {
+      margin-bottom: 80px; } }
+  @media (max-width: 767px) {
+    section {
+      margin-bottom: 40px; } }
+
+.section-title {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 38px;
+  color: #151515;
+  margin: 0 0 40px; }
+  @media (max-width: 767px) {
+    .section-title {
+      font-size: 24px;
+      line-height: 29px;
+      margin: 0 0 24px; } }
 
 .container {
   max-width: 1440px;
@@ -2773,6 +2795,84 @@ main {
   margin: -1px;
   clip: rect(0 0 0 0);
   overflow: hidden; }
+
+.btn,
+.btn-secondary {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 27px;
+  display: inline-block;
+  padding: 22px 38px;
+  background-color: #f32424;
+  border: none;
+  color: #fff;
+  text-align: center;
+  -webkit-transition: background-color 0.2s;
+  -o-transition: background-color 0.2s;
+  transition: background-color 0.2s; }
+  .btn:hover,
+  .btn-secondary:hover {
+    cursor: pointer;
+    background-color: #e71212; }
+  .btn:active,
+  .btn-secondary:active {
+    background-color: #ce0c0c; }
+  .btn:disabled, .btn.disabled,
+  .btn-secondary:disabled,
+  .btn-secondary.disabled {
+    cursor: default;
+    background-color: #f3f3f3;
+    color: #adb0b4;
+    pointer-events: none; }
+
+.btn-secondary {
+  background-color: #fff;
+  color: #151515; }
+  .btn-secondary:hover {
+    background-color: #f3f3f3; }
+  .btn-secondary:active {
+    background-color: #eeeeee; }
+  .btn-secondary:disabled, .btn-secondary.disabled {
+    cursor: default;
+    background-color: #f3f3f3;
+    color: #adb0b4;
+    pointer-events: none; }
+
+.btn-arrow {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #f32424;
+  -webkit-transition: color 0.2s;
+  -o-transition: color 0.2s;
+  transition: color 0.2s; }
+  .btn-arrow svg {
+    width: 24px;
+    height: 24px;
+    margin-left: 8px; }
+  .btn-arrow:hover {
+    cursor: pointer;
+    color: #e71212; }
+  .btn-arrow:active {
+    color: #ce0c0c; }
+
+@media (max-width: 767px) {
+  .btn,
+  .btn-secondary {
+    font-size: 16px;
+    line-height: 24px;
+    padding-top: 12px;
+    padding-bottom: 14px;
+    width: 100%; } }
 
 .footer {
   padding: 80px 0 20px;
@@ -2961,7 +3061,8 @@ main {
   background-color: #fff;
   padding: 30px 0;
   -webkit-box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1); }
+          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+  z-index: 10; }
 
 .header__container {
   display: -webkit-box;
@@ -3119,3 +3220,279 @@ main {
   .header__nav-button {
     top: 12px;
     right: 16px; } }
+
+.promo__block {
+  padding: 60px;
+  background: -o-linear-gradient(354.92deg, rgba(132, 1, 1, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top calc(50% + 55px) left 50%/cover url("../img/promo-bg.jpg");
+  background: linear-gradient(95.08deg, rgba(132, 1, 1, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top calc(50% + 55px) left 50%/cover url("../img/promo-bg.jpg"); }
+
+.promo__title {
+  font-weight: 600;
+  font-size: 46px;
+  line-height: 55px;
+  color: #fff;
+  margin: 0 0 144px;
+  max-width: 550px; }
+
+@media (max-width: 1279px) {
+  .promo__block {
+    padding: 32px;
+    background: -o-linear-gradient(354.92deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top 50% right -40px/cover url("../img/promo-bg.jpg");
+    background: linear-gradient(95.08deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top 50% right -40px/cover url("../img/promo-bg.jpg"); }
+  .promo__title {
+    margin: 0 0 427px; } }
+
+@media (max-width: 767px) {
+  .promo__block {
+    padding: 16px;
+    background: -o-linear-gradient(354.92deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top 50% right 0/cover url("../img/promo-bg.jpg");
+    background: linear-gradient(95.08deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top 50% right 0/cover url("../img/promo-bg.jpg"); }
+  .promo__title {
+    font-size: 24px;
+    line-height: 29px;
+    margin: 0 0 271px;
+    max-width: 260px; }
+  .promo__more-link {
+    width: 100%; } }
+
+@media (max-width: 600px) {
+  .promo__block {
+    background: -o-linear-gradient(354.92deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top 50% right -30px/cover url("../img/promo-bg.jpg");
+    background: linear-gradient(95.08deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top 50% right -30px/cover url("../img/promo-bg.jpg"); } }
+
+.quality__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.quality__desc-block {
+  width: calc((100% - 20px) / 2); }
+
+.quality__img-block {
+  width: calc((100% - 20px) / 2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.quality__img-item {
+  position: relative;
+  width: 100%;
+  padding-top: 58%;
+  overflow: hidden;
+  display: none; }
+  .quality__img-item img {
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
+
+.quality__tabs {
+  margin: 0 0 40px; }
+
+.quality__tab {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: #151515;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding-bottom: 16px; }
+  .quality__tab:hover {
+    cursor: pointer; }
+  .quality__tab.active {
+    border-bottom: 2px solid #151515; }
+  .quality__tab:not(:last-child) {
+    margin-right: 32px; }
+
+.quality__tab-desc {
+  display: none; }
+  .quality__tab-desc p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 25px;
+    color: #151515;
+    margin: 0 0 40px; }
+
+@media (max-width: 1279px) {
+  .quality__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .quality__desc-block,
+  .quality__img-block {
+    width: 100%; }
+  .quality__desc-block {
+    margin: 0 0 40px; }
+  .quality__img-item {
+    padding-top: 55%; } }
+
+@media (max-width: 767px) {
+  .quality__container {
+    padding-left: 0;
+    padding-right: 0; }
+  .quality__title {
+    margin-left: 16px;
+    margin-right: 16px; }
+  .quality__tab-desc {
+    margin-left: 16px;
+    margin-right: 16px; }
+  .quality__img-block {
+    padding-left: 16px;
+    padding-right: 16px; }
+  .quality__img-item {
+    padding-top: 111%; }
+    .quality__img-item img {
+      height: 100%;
+      width: auto;
+      max-width: none; }
+  .quality__tab:first-child {
+    margin-left: 16px; }
+  .quality__tab:last-child {
+    margin-right: 16px; }
+  .quality__tabs {
+    margin: 0 0 24px; }
+  .quality__tab-desc p {
+    margin: 0 0 24px; }
+  .quality__desc-block {
+    margin: 0 0 24px; } }
+
+.world-wide__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.world-wide__main {
+  width: calc((100% - 40px) / 3);
+  padding: 32px;
+  background-color: #f32424; }
+
+.world-wide__items {
+  width: calc((100% - 40px) / 3 * 2 + 20px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.world-wide__slogan {
+  display: block;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 38px;
+  color: #fff;
+  margin: 0 0 24px;
+  min-height: 391px;
+  max-width: 345px; }
+
+.world-wide__item {
+  height: 100%;
+  background-color: #f3f3f3;
+  width: calc((100% - 20px) / 2);
+  padding: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end; }
+  .world-wide__item:last-child {
+    margin-left: auto; }
+  .world-wide__item.half {
+    height: calc((100% - 20px) / 2); }
+  .world-wide__item.rus {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 100, 143, 0)), to(rgba(0, 27, 68, 0.8))), no-repeat center/cover url("../img/rus.png");
+    background: -o-linear-gradient(top, rgba(0, 100, 143, 0) 0%, rgba(0, 27, 68, 0.8) 100%), no-repeat center/cover url("../img/rus.png");
+    background: linear-gradient(180deg, rgba(0, 100, 143, 0) 0%, rgba(0, 27, 68, 0.8) 100%), no-repeat center/cover url("../img/rus.png"); }
+  .world-wide__item.kz {
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(40.19%, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.8))), no-repeat center/cover url("../img/kz.png");
+    background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 40.19%, rgba(0, 0, 0, 0.8) 100%), no-repeat center/cover url("../img/kz.png");
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 40.19%, rgba(0, 0, 0, 0.8) 100%), no-repeat center/cover url("../img/kz.png"); }
+  .world-wide__item.sa {
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(30.57%, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.3))), no-repeat center/cover url("../img/sa.jpg");
+    background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 30.57%, rgba(0, 0, 0, 0.3) 100%), no-repeat center/cover url("../img/sa.jpg");
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 30.57%, rgba(0, 0, 0, 0.3) 100%), no-repeat center/cover url("../img/sa.jpg"); }
+
+.world-wide__item-title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  margin: 0 0 4px;
+  color: #fff; }
+
+.world-wide__item-desc {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  color: #fff;
+  margin: 0; }
+
+@media (max-width: 1279px) {
+  .world-wide__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .world-wide__main {
+    width: 100%;
+    margin: 0 0 20px; }
+  .world-wide__slogan {
+    min-height: 106px;
+    max-width: 482px; }
+  .world-wide__items {
+    width: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row; }
+  .world-wide__item {
+    width: 100%;
+    height: 265px; }
+    .world-wide__item.half {
+      height: 265px; }
+    .world-wide__item:not(:last-child) {
+      margin-bottom: 20px; } }
+
+@media (max-width: 767px) {
+  .world-wide__main {
+    padding: 16px;
+    margin: 0 0 16px; }
+  .world-wide__slogan {
+    min-height: 130px;
+    font-size: 20px;
+    line-height: 24px; }
+  .world-wide__item {
+    padding: 24px 16px;
+    height: 236px; }
+    .world-wide__item:not(:last-child) {
+      margin-bottom: 16px; }
+    .world-wide__item.half {
+      height: 236px; }
+  .world-wide__item-title {
+    font-size: 20px;
+    line-height: 24px;
+    margin: 0 0 8px; } }
