--- a/source/scss/blocks/perfection.scss
+++ b/source/scss/blocks/perfection.scss
@@ -30,10 +30,14 @@
 
   &.rac {
     top: 123px;
+    width: 412px;
+    height: 183px;
   }
 
   &.cac {
     top: 102px;
+    width: 200px;
+    height: 262px;
   }
 }
 
