--- a/source/scss/global/variables.scss
+++ b/source/scss/global/variables.scss
@@ -21,6 +21,7 @@ $grey200: #eeeeee;
 $grey300: #dee0e1;
 $grey400: #adb0b4;
 $darkGrey: #172330;
+$fail: #ff3326;
 // $white: #ffffff;
 // $grey200: #f4f4f8;
 // $grey250: #e6e6ef;
