--- a/source/scss/components/breadcrumbs.scss
+++ b/source/scss/components/breadcrumbs.scss
@@ -1,8 +1,13 @@
 .breadcrumbs {
-  margin: 0 0 40px;
+  margin: 0 0 34px;
 }
 
 .breadcrumbs__container {
+  display: flex;
+  align-items: flex-start;
+}
+
+.breadcrumbs__links {
   display: flex;
   flex-wrap: wrap;
 }
@@ -13,6 +18,8 @@
   line-height: 17px;
   color: $grey400;
   transition: color 0.2s;
+  margin: 0 0 6px;
+  white-space: nowrap;
 
   &:not(:last-child) {
     &::after {
@@ -29,8 +36,21 @@
   }
 }
 
+.breadcrumbs__additional {
+  padding-bottom: 6px;
+  padding-left: 24px;
+  margin-left: auto;
+  flex-shrink: 0;
+  white-space: nowrap;
+
+  .breadcrumbs__additional-link {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
+
 @include mobile {
   .breadcrumbs {
-    margin: 0 0 32px;
+    margin: 0 0 26px;
   }
 }
