--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,6 +1,7 @@
 @import '../../node_modules/normalize.css/normalize';
 @import '../../node_modules/swiper/swiper-bundle';
 @import '../../node_modules/jquery-ui-bundle/jquery-ui';
+@import '../../node_modules/select2/dist/css/select2';
 
 //Global
 @import 'global/variables.scss';
