--- a/source/scss/components/modal.scss
+++ b/source/scss/components/modal.scss
@@ -6,6 +6,15 @@
   right: 0;
   margin: 0;
   z-index: 20;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.2s, visibility 0s 0.2s;
+
+  &.js-show {
+    opacity: 1;
+    visibility: visible;
+    transition-delay: 0s;
+  }
 }
 
 .modal__overlay {
@@ -40,6 +49,7 @@
 .modal__header {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   margin: 0 0 24px;
 }
 
@@ -60,6 +70,8 @@
   color: $main-text;
   transition: color 0.2s;
   flex-shrink: 0;
+  margin-left: 24px;
+  margin-top: 7px;
 
   &:hover {
     cursor: pointer;
@@ -78,4 +90,39 @@
   line-height: 25px;
   color: $main-text;
   margin: 0 0 40px;
+}
+
+.modal__btn-block {
+  width: 100%;
+}
+
+@include mobile {
+  .modal__body {
+    margin: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: calc(100% - 95px);
+    max-width: none;
+    overflow-y: auto;
+    padding: 24px 16px;
+  }
+
+  .modal__title {
+    font-size: 24px;
+    line-height: 29px;
+  }
+
+  .modal__close-btn {
+    margin-top: 3px;
+  }
+
+  .modal__btn-block {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 24px 16px;
+    background-color: #fff;
+  }
 }
