--- a/source/scss/global/global.scss
+++ b/source/scss/global/global.scss
@@ -27,6 +27,10 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+
+  &.js-no-scroll {
+    overflow: hidden;
+  }
 }
 
 main {
